primitiv/operator.pxd

from libcpp.string cimport string
from libcpp.vector cimport vector
from libcpp cimport bool

from primitiv.device cimport Device
from primitiv.graph cimport Graph, Node
from primitiv.tensor cimport Tensor
from primitiv.shape cimport Shape
from primitiv.parameter cimport Parameter

cdef extern from "operator_template_wrapper.h" namespace "python_primitiv":

    Node Node_input_vector(const Shape &shape, const vector[float] &data, Device &dev, Graph &g)
    Node Node_input_vector(const Shape &shape, const vector[float] &data, Device &dev)
    Tensor Tensor_input_vector(const Shape &shape, const vector[float] &data, Device &dev)
    Node Node_input_parameter(Parameter &param, Graph &g)
    Node Node_input_parameter(Parameter &param)
    Tensor Tensor_input_parameter(Parameter &param)
    Node Node_copy(const Node &x, Device &dev)
    Tensor Tensor_copy(const Tensor &x, Device &dev)
    Node Node_pick(const Node &x, const vector[unsigned] &ids, unsigned dim)
    Tensor Tensor_pick(const Tensor &x, const vector[unsigned] &ids, unsigned dim)
    Node Node_slice(const Node &x, unsigned dim, unsigned lower, unsigned upper)
    Tensor Tensor_slice(const Tensor &x, unsigned dim, unsigned lower, unsigned upper)
    Node Node_concat(const vector[Node] &xs, unsigned dim)
    Tensor Tensor_concat(const vector[Tensor] &xs, unsigned dim)
    Node Node_reshape(const Node &x, const Shape &new_shape)
    Tensor Tensor_reshape(const Tensor &x, const Shape &new_shape)
    Node Node_flatten(const Node &x)
    Tensor Tensor_flatten(const Tensor &x)
    Node Node_transpose(const Node &x)
    Tensor Tensor_transpose(const Tensor &x)
    Node Node_matmul(const Node &a, const Node &b)
    Tensor Tensor_matmul(const Tensor &a, const Tensor &b)
    Node Node_sqrt(const Node &x)
    Tensor Tensor_sqrt(const Tensor &x)
    Node Node_exp(const Node &x)
    Tensor Tensor_exp(const Tensor &x)
    Node Node_log(const Node &x)
    Tensor Tensor_log(const Tensor &x)
    Node Node_tanh(const Node &x)
    Tensor Tensor_tanh(const Tensor &x)
    Node Node_sigmoid(const Node &x)
    Tensor Tensor_sigmoid(const Tensor &x)
    Node Node_softplus(const Node &x)
    Tensor Tensor_softplus(const Tensor &x)
    Node Node_sin(const Node &x)
    Tensor Tensor_sin(const Tensor &x)
    Node Node_cos(const Node &x)
    Tensor Tensor_cos(const Tensor &x)
    Node Node_tan(const Node &x)
    Tensor Tensor_tan(const Tensor &x)
    Node Node_relu(const Node &x)
    Tensor Tensor_relu(const Tensor &x)
    Node Node_lrelu(const Node &x)
    Tensor Tensor_lrelu(const Tensor &x)
    Node Node_prelu(const Node &x, float a)
    Tensor Tensor_prelu(const Tensor &x, float a)
    Node Node_elu(const Node &x, float a)
    Tensor Tensor_elu(const Tensor &x, float a)
    Node Node_selu(const Node &x, float a, float s)
    Tensor Tensor_selu(const Tensor &x, float a, float s)
    Node Node_sum(const Node &x, unsigned dim)
    Tensor Tensor_sum(const Tensor &x, unsigned dim)
    Node Node_mean(const Node &x, unsigned dim)
    Tensor Node_mean(const Tensor &x, unsigned dim)
    Node Node_broadcast(const Node &x, unsigned dim, unsigned size)
    Tensor Tensor_broadcast(const Tensor &x, unsigned dim, unsigned size)
    Node Node_logsumexp(const Node &x, unsigned dim)
    Tensor Tensor_logsumexp(const Tensor &x, unsigned dim)
    Node Node_log_softmax(const Node &x, unsigned dim)
    Tensor Tensor_log_softmax(const Tensor &x, unsigned dim)
    Node Node_softmax(const Node &x, unsigned dim)
    Tensor Tensor_softmax(const Tensor &x, unsigned dim)
    Node Node_softmax_cross_entropy(const Node &x, const Node &t, unsigned dim)
    Tensor Tensor_softmax_cross_entropy(const Tensor &x, const Tensor &t, unsigned dim)
    Node Node_softmax_cross_entropy(const Node &x, const vector[unsigned] &ids, unsigned dim)
    Tensor Tensor_softmax_cross_entropy(const Tensor &x, const vector[unsigned] &ids, unsigned dim)
    Node Node_sum(const Node &x)
    Tensor Tensor_sum(const Tensor &x)
    Node Node_mean(const Node &x)
    Tensor Tensor_mean(const Tensor &x)
    Node Node_normalize(const Node &x)
    Tensor Tensor_normalize(const Tensor &x)
    Node Node_constant(const Shape &shape, float k, Device &dev, Graph &g)
    Node Node_zeros(const Shape &shape, Device &dev, Graph &g)
    Node Node_ones(const Shape &shape, Device &dev, Graph &g)
    Node Node_identity(unsigned size, Device &dev, Graph &g)
    Node Node_constant(const Shape &shape, float k, Device &dev)
    Tensor Tensor_constant(const Shape &shape, float k, Device &dev)
    Node Node_zeros(const Shape &shape, Device &dev)
    Tensor Tensor_zeros(const Shape &shape, Device &dev)
    Node Node_ones(const Shape &shape, Device &dev)
    Tensor Tensor_ones(const Shape &shape, Device &dev)
    Node Node_identity(unsigned size, Device &dev)
    Tensor Tensor_identity(unsigned size, Device &dev)
    Node Node_bernoulli(const Shape &shape, float p, Device &dev, Graph &g)
    Node Node_bernoulli(const Shape &shape, float p, Device &dev)
    Tensor Tensor_bernoulli(const Shape &shape, float p, Device &dev)
    Node Node_uniform(const Shape &shape, float lower, float upper, Device &dev, Graph &g)
    Node Node_uniform(const Shape &shape, float lower, float upper, Device &dev)
    Tensor Tensor_uniform(const Shape &shape, float lower, float upper, Device &dev)
    Node Node_normal(const Shape &shape, float mean, float sd, Device &dev, Graph &g)
    Node Node_normal(const Shape &shape, float mean, float sd, Device &dev)
    Tensor Tensor_normal(const Shape &shape, float mean, float sd, Device &dev)
    Node Node_log_normal(const Shape &shape, float mean, float sd, Device &dev, Graph &g)
    Node Node_log_normal(const Shape &shape, float mean, float sd, Device &dev)
    Tensor Tensor_log_normal(const Shape &shape, float mean, float sd, Device &dev)
    Node Node_gumbel(const Shape &shape, float mu, float beta, Device &dev, Graph &g)
    Node Node_gumbel(const Shape &shape, float mu, float beta, Device &dev)
    Tensor Tensor_gumbel(const Shape &shape, float mu, float beta, Device &dev)
    Node Node_dropout(const Node &x, float rate, bool enabled)
    Tensor Tensor_dropout(const Tensor &x, float rate, bool enabled)
